--- a/pmose-portfolio/public/index.html
+++ b/pmose-portfolio/public/index.html
@@ -26,6 +26,7 @@
     -->
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 
     <title>Pat M</title>
   </head>
